doc/windows/Delphi/64bit/single_card/gts.pas


function GT_PvtTable(tableId:SmallInt;count:LongInt;var pTime:Double;var pPos:Double;var pVel:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableEx(tableId:SmallInt;count:LongInt;var pTime:Double;var pPos:Double;var pVelBegin:Double;var pVelEnd:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableComplete(tableId:SmallInt;count:LongInt;var pTime:Double;var pPos:Double;var pA:Double;var pB:Double;var pC:Double;velBegin:Double=0;velEnd:Double=0):SmallInt;stdcall;External GTDLL;
function GT_PvtTablePercent(tableId:SmallInt;count:LongInt;var pTime:Double;var pPos:Double;var pPercent:Double;velBegin:Double=0):SmallInt;stdcall;External GTDLL;
function GT_PvtPercentCalculate(n:LongInt;var pTime:Double;var pPos:Double;var pPercent:Double;velBegin:Double;var pVel:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableContinuous(tableId:SmallInt;count:LongInt;var pPos:Double;var pVel:Double;var pPercent:Double;var pVelMax:Double;var pAcc:Double;var pDec:Double;timeBegin:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtContinuousCalculate(n:LongInt;var pPos:Double;var pVel:Double;var pPercent:Double;var pVelMax:Double;var pAcc:Double;var pDec:Double;var pTime:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableMovePercent(tableId:SmallInt;distance:LongInt;vm:Double;acc:Double;pa1:Double;pa2:Double;dec:Double;pd1:Double;pd2:Double;var pVel:Double;var pAcc:Double;var pDec:Double;var pTime:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableMovePercentEx(tableId:SmallInt;distance:LongInt;vm:Double;acc:Double;pa1:Double;pa2:Double;ma:Double;dec:Double;pd1:Double;pd2:Double;md:Double;var pVel:Double;var pAcc:Double;var pDec:Double;var pTime:Double):SmallInt;stdcall;External GTDLL;

function GT_HomeInit: SmallInt; stdcall; External GTDLL;
function GT_Home(axis:SmallInt;pos:LongInt;vel:Double;acc:Double;offset:LongInt): SmallInt; stdcall; External GTDLL;
function GT_Index(axis:SmallInt;pos:LongInt;offset:LongInt): SmallInt; stdcall; External GTDLL;
function GT_HomeStop(axis:SmallInt;pos:LongInt;vel:Double;acc:Double): SmallInt; stdcall; External GTDLL;
function GT_HomeSts(axis:SmallInt;out pStatus:Word): SmallInt; stdcall; External GTDLL;

function GT_HandwheelInit(): SmallInt; stdcall; External GTDLL;
function GT_SetHandwheelStopDec(slave:SmallInt;decSmoothStop:Double;decAbruptStop:Double): SmallInt; stdcall; External GTDLL;
function GT_StartHandwheel(slave:SmallInt;master:SmallInt;masterEven:SmallInt;slaveEven:SmallInt;intervalTime:SmallInt;acc:Double;dec:Double;vel:Double;stopWaitTime:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_EndHandwheel(slave:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetTrigger(i:SmallInt;out pTrigger:TTrigger): SmallInt; stdcall; External GTDLL;
function GT_GetTrigger(i:SmallInt;out pTrigger:TTrigger): SmallInt; stdcall; External GTDLL;
function GT_GetTriggerStatus(i:SmallInt;out pTriggerStatus:TTriggerStatus;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_GetTriggerStatusEx(i:SmallInt;out pTriggerStatusEx:TTriggerStatusEx;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_ClearTriggerStatus(i:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetComparePort(channel:SmallInt;hsio0:SmallInt;hsio1:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_ComparePulse(level:SmallInt;outputType:SmallInt;time:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_CompareStop: SmallInt; stdcall; External GTDLL;
function GT_CompareStatus(out pStatus:SmallInt;out pCount:LongInt): SmallInt; stdcall; External GTDLL;
function GT_CompareData(encoder:SmallInt;source:SmallInt;pulseType:SmallInt;startLevel:SmallInt;time:SmallInt;var pBuf1:LongInt;count1:SmallInt;var pBuf2:LongInt;count2:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_CompareLinear(encoder:SmallInt;channel:SmallInt;startPos:LongInt;repeatTimes:LongInt;interval:LongInt;time:SmallInt;source:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_CompareContinuePulseMode(mode:SmallInt;count:SmallInt;standTime:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetEncResponseCheck(control:SmallInt;dacThreshold:SmallInt;minEncVel:Double;time:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetEncResponseCheck(control:SmallInt;out pDacThreshold:SmallInt;out pMinEncVel:Double;out pTime:LongInt): SmallInt; stdcall; External GTDLL;
function GT_EnableEncResponseCheck(control:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_DisableEncResponseCheck(control:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_2DCompareMode(chn:SmallInt;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DComparePulse(chn:SmallInt;level:SmallInt;outputType:SmallInt;time:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareStop(chn:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareClear(chn:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareStatus(chn:SmallInt;out pStatus:SmallInt;out pCount:LongInt;out pFifo:SmallInt;out pFifoCount:SmallInt;out pBufCount:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareSetPrm(chn:SmallInt;out pPrm:T2DComparePrm): SmallInt; stdcall; External GTDLL;
function GT_2DCompareData(chn:SmallInt;count:SmallInt;out pBuf:T2DCompareData;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareStart(chn:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareClearData(chn:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareSetPreOutTime(chn:SmallInt;preOutputTime:Double): SmallInt; stdcall; External GTDLL;

function GT_SetAxisMode(axis:SmallInt;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetAxisMode(axis:SmallInt;out ppMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetHSIOOpt(value:Word;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetHSIOOpt(out pValue:Word;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LaserPowerMode(laserPowerMode:SmallInt;maxValue:Double;minValue:Double;channel:SmallInt=0;delaymode:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LaserPrfCmd(outputCmd:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LaserOutFrq(outFrq:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetPulseWidth(width:LongWord;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetWaitPulse(mode:Word;waitPulseFrq:Double;waitPulseDuty:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetPreVltg(mode:Word;voltageValue:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLevelDelay(offDelay:Word;onDelay:Word;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_EnaFPK(time1:Word;time2:Word;laserOffDelay:Word;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_DisFPK(channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserDisMode(mode:SmallInt;source:SmallInt;out pPos:LongInt;out pScale:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserDisRatio(out pRatio:Double;minPower:Double;maxPower:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetWaitPulseEx(mode:Word;waitPulseFrq:Double;waitPulseDuty:Double): SmallInt; stdcall; External GTDLL;
function GT_SetLaserMode(mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetLaserFollowSpline(tableId:SmallInt;n:LongInt;var pX:Double;var pY:Double;beginValue:Double;endValue:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetLaserFollowSpline(tableId:SmallInt;n:LongInt;out pX:Double;out pY:Double;out pA:Double;out pB:Double;out pC:Double;out pCount:LongInt;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;

//ExtMdl
function GT_OpenExtMdl(out pDllName:String): SmallInt; stdcall; External GTDLL;
function GT_CloseExtMdl(): SmallInt; stdcall; External GTDLL;
function GT_SwitchtoCardNoExtMdl(card:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_ResetExtMdl(): SmallInt; stdcall; External GTDLL;
function GT_LoadExtConfig(var pFileName:String): SmallInt; stdcall; External GTDLL;
function GT_SetExtIoValue(mdl:SmallInt;value:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtIoValue(mdl:SmallInt;out pValue:Word): SmallInt; stdcall; External GTDLL;
function GT_SetExtIoBit(mdl:SmallInt;index:SmallInt;value:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtIoBit(mdl:SmallInt;index:SmallInt;out pValue:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtAdValue(mdl:SmallInt;chn:SmallInt;out pValue:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtAdVoltage(mdl:SmallInt;chn:SmallInt;out pValue:Double): SmallInt; stdcall; External GTDLL;
function GT_SetExtDaValue(mdl:SmallInt;chn:SmallInt;value:Word): SmallInt; stdcall; External GTDLL;
function GT_SetExtDaVoltage(mdl:SmallInt;chn:SmallInt;value:Double): SmallInt; stdcall; External GTDLL;
function GT_GetStsExtMdl(mdl:SmallInt;chn:SmallInt;var pStatus:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtDoValue(mdl:SmallInt;var pValue:Word): SmallInt; stdcall; External GTDLL;
function GT_GetExtMdlMode(var pMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetExtMdlMode(mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_UploadConfig(): SmallInt; stdcall; External GTDLL;
function GT_DownloadConfig(): SmallInt; stdcall; External GTDLL;

function GT_GetUuid(out pCode:String;count:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetUuid(var pCode:String;count:SmallInt): SmallInt; stdcall; External GTDLL;

//////////////////////////////////////////////////////////////////////////////////////
//2D Compensate

type TCompensate2DTable = record  
	count:array[0..1] of SmallInt;
    posBegin:array[0..1] of LongInt;                       
	step:array[0..1] of LongInt;                                                      
end;

type TCompensate2D = record   
    enable:SmallInt;                               
	tableIndex:SmallInt;                            
	axisType:array[0..1] of SmallInt;	                         
	axisIndex:array[0..1] of SmallInt;	                         
end;

function GT_SetCompensate2DTable(tableIndex : SmallInt;var pTable:TCompensate2DTable ;var pData:LongInt;externComp:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetCompensate2DTable(tableIndex : SmallInt;out pTable:TCompensate2DTable ;out pExternComp:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetCompensate2D(axis : SmallInt;var pComp2d:TCompensate2D): SmallInt; stdcall; External GTDLL;
function GT_GetCompensate2D(axis : SmallInt;out pComp2d:TCompensate2D): SmallInt; stdcall; External GTDLL;
function GT_GetCompensate2DValue(axis : SmallInt;out pValue:Double): SmallInt; stdcall; External GTDLL;
